@@ -55,6 +55,8 @@ Add a new label - multi_bucket_impact - to record level anomaly results.
 The value will be on a scale of -5 to +5 where -5 means the anomaly is purely single bucket
 and +5 means the anomaly is purely multi bucket. ({ml-pull}230[230])
 
+Improve our ability to detect change points in the presence of outliers. (See {ml-pull}265[265].)
+
 === Bug Fixes
 
 Fix cause of "Bad density value..." log errors whilst forecasting. ({ml-pull}207[207])
